tests/errors/continue_outside_control_flow.dang
# continue is only valid inside a block-taking call
continue
